--- a/events&Promotions.html
+++ b/events&Promotions.html
@@ -129,7 +129,7 @@
                             <h2 class="fm-lato fw-normal fs-5 mb-3 text-center" style="color:#8E8E93 ;">Day: <span
                                     class="text-dark">Feb 28, 2024</span></h2>
                             <div class="d-flex justify-content-center">
-                                <a href="eventDetails.html" class="btn text-white rounded-3 fw-bold fs-6 py-2 "
+                                <a href="eventDetails.html" class="btn text-white rounded-3 fw-medium fs-6 py-2 "
                                     style="background: #2D1817;">
                                     About Event
                                 </a>
@@ -149,7 +149,7 @@
                             <h2 class="fm-lato fw-normal fs-5 mb-3 text-center" style="color:#8E8E93 ;">Day: <span
                                     class="text-dark">Feb 28, 2024</span></h2>
                             <div class="d-flex justify-content-center">
-                                <a href="eventDetails.html" class="btn text-white rounded-3 fw-bold fs-6 py-2 "
+                                <a href="eventDetails.html" class="btn text-white rounded-3 fw-medium fs-6 py-2 "
                                     style="background: #2D1817;">
                                     About Event
                                 </a>
@@ -169,7 +169,7 @@
                             <h2 class="fm-lato fw-normal fs-5 mb-3 text-center" style="color:#8E8E93 ;">Day: <span
                                     class="text-dark">Feb 28, 2024</span></h2>
                             <div class="d-flex justify-content-center">
-                                <a href="eventDetails.html" class="btn text-white rounded-3 fw-bold fs-6 py-2 "
+                                <a href="eventDetails.html" class="btn text-white rounded-3 fw-medium fs-6 py-2 "
                                     style="background: #2D1817;">
                                     About Event
                                 </a>
