--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h1 class="fs-4 fw-normal text-dark mb-3 fm-forum lh-base">Explore Our Collections</h1>
             <p class="fw-normal fs-6 fm-lato text-dark mb-4 lh-base">Discover our curated collections, each designed to
                 bring elegance and comfort to your home.</p>
-            <button class="btn text-white rounded-3 fw-bold fs-6 mb-5" style="background: #2D1817;">
+            <button class="btn text-white rounded-3 fw-medium fs-6 mb-5" style="background: #2D1817;">
                 Shop Now
             </button>
             <div class="row g-4 ">
@@ -151,7 +151,7 @@
                         <p class="fw-normal fs-6 fm-lato text-dark">Elevate your living space into a haven of modern
                             sophistication. Our thoughtfully curated collection combines innovative design with
                             exceptional comfort, crafting interiors that foster both connection and tranquility.</p>
-                        <button class="btn text-white rounded-3 fw-bold fs-6 " style="background: #2D1817;">
+                        <button class="btn text-white rounded-3 fw-medium fs-6 " style="background: #2D1817;">
                             Shop Now
                         </button>
                     </div>
@@ -188,7 +188,7 @@
                         <p class="fw-normal fs-6 fm-lato text-dark">Create your perfect retreat with bedroom furniture
                             that combines luxury and comfort. Each piece is designed to support restful sleep and
                             rejuvenation, turning your space into a true personal sanctuary.</p>
-                        <button class="btn text-white rounded-3 fw-bold fs-6 " style="background: #2D1817;">
+                        <button class="btn text-white rounded-3 fw-medium fs-6 " style="background: #2D1817;">
                             Shop Now
                         </button>
                     </div>
@@ -269,7 +269,7 @@
                                 style="height: 32px; width: 32px;" src="assets/images/checkmark.svg" alt=""> Crafted to
                             Perfection</li>
                     </ul>
-                    <button class="btn text-white rounded-3 fw-bold fs-6 " style="background: #2D1817;">
+                    <button class="btn text-white rounded-3 fw-medium fs-6 " style="background: #2D1817;">
                         Shop Now
                     </button>
                 </div>
