--- a/tradeshows.html
+++ b/tradeshows.html
@@ -149,6 +149,12 @@
                     </div>
                 </div>
             </div>
+            <div class="d-flex justify-content-center align-items-center pt-3">
+                                <a href="#" class="btn text-white rounded-3 fw-medium fs-6 py-2 px-5"
+                                    style="background: #2D1817;">
+                                    View All
+                                </a>
+                            </div>
         </div>
     </section>
     <!-- =========================Past Event Gallery end====================== -->
