--- a/contactUs.html
+++ b/contactUs.html
@@ -142,9 +142,9 @@
     <footer class="py-5" style="border-top: 1px solid  #E5E5EA">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center">
-                <div class="footerLogo">
+                 <a href="index.html" class="footerLogo">
                     <img src="assets/images/logo.svg" alt="Footer Logo">
-                </div>
+                </a>
             </div>
             <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
                 <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">How to Buy</a>
