--- a/eventDetails.html
+++ b/eventDetails.html
@@ -122,26 +122,26 @@
                         our sustainable manufacturing processes and the stories behind our most coveted designs.</p>
                     <h1 class="fm-forum lh-base fw-normal fs-2  text-dark mb-3 mt-4 text-start">Event Gallery</h1>
                     <div class="row g-3">
-                        <div class="col-lg-7 col-md-6 col-12">
-                            <div class="rounded-lg-4 rounded-3 overflow-hidden image_hight_auto" style="height: 345px;">
+                        <div class="col-xl-7 col-lg-6 col-md-6 col-12">
+                            <div class="rounded-lg-4 rounded-3 overflow-hidden image_hight_auto ht-290" style="height: 345px;">
                                 <img class="h-100 w-100" loading="lazy" src="assets/images/e-gallery1.png"
                                     alt="gallery1">
                             </div>
                         </div>
-                        <div class="col-lg-5 col-md-6 col-12">
-                            <div class="rounded-lg-4 rounded-3 overflow-hidden image_hight_auto" style="height: 345px;">
+                        <div class="col-xl-5 col-lg-6 col-md-6 col-12">
+                            <div class="rounded-lg-4 rounded-3 overflow-hidden image_hight_auto ht-290" style="height: 345px;">
                                 <img class="h-100 w-100" loading="lazy" src="assets/images/e-gallery2.png"
                                     alt="gallery2">
                             </div>
                         </div>
-                        <div class="col-lg-5 col-md-6 col-12">
-                            <div class="rounded-lg-4 rounded-3 overflow-hidden image_hight_auto" style="height: 345px;">
+                        <div class="col-xl-5 col-lg-6 col-md-6 col-12">
+                            <div class="rounded-lg-4 rounded-3 overflow-hidden image_hight_auto ht-290" style="height: 345px;">
                                 <img class="h-100 w-100" loading="lazy" src="assets/images/e-gallery3.png"
                                     alt="gallery3">
                             </div>
                         </div>
-                        <div class="col-lg-7 col-md-6 col-12">
-                            <div class="rounded-lg-4 rounded-3 overflow-hidden image_hight_auto" style="height: 345px;">
+                        <div class="col-xl-7 col-lg-6 col-md-6 col-12">
+                            <div class="rounded-lg-4 rounded-3 overflow-hidden image_hight_auto ht-290" style="height: 345px;">
                                 <img class="h-100 w-100" loading="lazy" src="assets/images/e-gallery4.png"
                                     alt="gallery4">
                             </div>
@@ -194,9 +194,9 @@
     <footer class="py-5 " style="border-top: 1px solid  #E5E5EA">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center">
-                <div class="footerLogo">
+                 <a href="index.html" class="footerLogo">
                     <img src="assets/images/logo.svg" alt="Footer Logo">
-                </div>
+                </a>
             </div>
             <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
                 <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">How to Buy</a>
