--- a/lookbook.html
+++ b/lookbook.html
@@ -96,52 +96,52 @@
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-4 col-xl-5 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto_mb" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook1.png" alt="Gallery Image 1">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-4 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto_mb" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook2.png" alt="Gallery Image 2">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto_mb" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook3.png" alt="Gallery Image 3">
                     </div>
                 </div>
                 <div class="col-lg-6 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto_mb" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook4.png" alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-6 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto_mb" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook5.png" alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-5 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto_mb" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook6.png" alt="Gallery Image 1">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-4 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto_mb" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook7.png" alt="Gallery Image 2">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto_mb" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook8.png" alt="Gallery Image 3">
                     </div>
                 </div>
                 <div class="col-lg-6 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto_mb" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook9.png" alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-6 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto_mb" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook10.png" alt="Gallery Image 4">
                     </div>
                 </div>
@@ -198,9 +198,9 @@
     <footer class="py-5" style="border-top: 1px solid  #E5E5EA">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center">
-                <div class="footerLogo">
+                <a href="index.html" class="footerLogo">
                     <img src="assets/images/logo.svg" alt="Footer Logo">
-                </div>
+                </a>
 
             </div>
             <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
