--- a/index.html
+++ b/index.html
@@ -206,32 +206,32 @@
                 Designs</p>
             <div class="row g-3">
                 <div class="col-lg-4 col-xl-3 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 330px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto ht-290" style="height: 330px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/gallery1.png" alt="Gallery Image 1">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 330px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto ht-290" style="height: 330px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/gallery2.png" alt="Gallery Image 2">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 330px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto ht-290" style="height: 330px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/gallery3.png" alt="Gallery Image 3">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 330px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto ht-290" style="height: 330px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/gallery4.png" alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 330px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto ht-290" style="height: 330px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/gallery5.png" alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
-                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 330px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto ht-290" style="height: 330px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/gallery6.png" alt="Gallery Image 4">
                     </div>
                 </div>
@@ -341,9 +341,9 @@
     <footer class="py-5" style="border-top: 1px solid  #E5E5EA">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center">
-                <div class="footerLogo">
+                 <a href="index.html" class="footerLogo">
                     <img src="assets/images/logo.svg" alt="Footer Logo">
-                </div>
+                </a>
 
             </div>
             <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
