--- a/tradeshows.html
+++ b/tradeshows.html
@@ -150,8 +150,8 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center align-items-center pt-3">
-                                <a href="#" class="btn text-white rounded-3 fw-medium fs-6 py-2 px-5"
-                                    style="background: #2D1817;">
+                                <a href="#" class="btn text-white rounded-3 fw-medium fs-6 py-2 "
+                                    style="background: #2D1817; padding-left: 2rem !important; padding-right: 2rem !important;">
                                     View All
                                 </a>
                             </div>
