--- a/tradeshows.html
+++ b/tradeshows.html
@@ -46,12 +46,14 @@
                         <li><a href="lookbook.html" class="navlink">At A Glance</a></li>
                         <li><a href="events&Promotions.html" class="navlink">Events & Promotions</a></li>
                         <li><a href="tradeshows.html" class="navlink">TRADESHOWS</a></li>
-                         <li><a target="_blank" href="https://www.hingesdesign.com/register" class="navlink">BECOME A CUSTOMER</a></li>
+                        <li><a target="_blank" href="https://www.hingesdesign.com/register" class="navlink">BECOME A
+                                CUSTOMER</a></li>
                     </ul>
                 </nav>
                 <div class="d-flex justify-content-end align-items-center gap-4">
                     <!-- sign in button -->
-                    <a href="https://www.hingesdesign.com/?showLogin=true" target="_blank" class="signInBtn d-flex justify-content-end align-items-center gap-2">
+                    <a href="https://www.hingesdesign.com/?showLogin=true" target="_blank"
+                        class="signInBtn d-flex justify-content-end align-items-center gap-2">
                         <img class="flex-shrink-0 icon_w" src="assets/images/user.svg" alt="Icon">
                         <img class="flex-shrink-0 icon_b" src="assets/images/user_black_icon.svg" alt="Icon">
                         <span class="text-nowrap">SIGN IN</span>
@@ -116,16 +118,19 @@
     <section class="pb-5">
         <div class="container">
             <h1 class="fs-2 fw-normal text-dark  fm-forum lh-base text-center">Past Event Gallery</h1>
-            <p class="fw-normal fs-6 fm-lato text-dark mb-5 lh-base text-center">Relive the memorable moments from our previous exhibitions and see the impact of our designs.</p>
+            <p class="fw-normal fs-6 fm-lato text-dark mb-5 lh-base text-center">Relive the memorable moments from our
+                previous exhibitions and see the impact of our designs.</p>
             <div class="row g-3">
                 <div class="col-lg-4 col-xl-3 col-md-6">
                     <div class="rounded-4 overflow-hidden image_hight_auto" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_small.png" alt="Gallery Image 1">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_small.png"
+                            alt="Gallery Image 1">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
                     <div class="rounded-4 overflow-hidden image_hight_auto" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_small.png" alt="Gallery Image 2">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_small.png"
+                            alt="Gallery Image 2">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-6 col-md-6">
@@ -140,21 +145,23 @@
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
                     <div class="rounded-4 overflow-hidden image_hight_auto" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_small.png" alt="Gallery Image 4">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_small.png"
+                            alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
                     <div class="rounded-4 overflow-hidden image_hight_auto" style="height: 330px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_small.png" alt="Gallery Image 4">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_small.png"
+                            alt="Gallery Image 4">
                     </div>
                 </div>
             </div>
             <div class="d-flex justify-content-center align-items-center pt-3">
-                                <a href="#" class="btn text-white rounded-3 fw-medium fs-6 py-2 "
-                                    style="background: #2D1817; padding-left: 2rem !important; padding-right: 2rem !important;">
-                                    View All
-                                </a>
-                            </div>
+                <a href="#" class="btn text-white rounded-3 fw-medium fs-6 py-2 "
+                    style="background: #2D1817; padding-left: 2rem !important; padding-right: 2rem !important;">
+                    View All
+                </a>
+            </div>
         </div>
     </section>
     <!-- =========================Past Event Gallery end====================== -->
@@ -163,7 +170,7 @@
     <footer class="py-5" style="border-top: 1px solid  #E5E5EA">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center">
-                 <a href="index.html" class="footerLogo">
+                <a href="index.html" class="footerLogo">
                     <img src="assets/images/logo.svg" alt="Footer Logo">
                 </a>
             </div>
