--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- ======================header area end===================== -->
 
     <!-- =======================hero section start======================= -->
-    <section class="hero_section vh-100">
+    <section class="hero_section vh-100 home_hero_section">
         <div class="container h-100">
             <div class="d-flex justify-content-center align-items-center h-100">
                 <div>
