--- a/becomeACustomer.html
+++ b/becomeACustomer.html
@@ -20,18 +20,7 @@
 </head>
 
 <body>
-    <!-- pre loader with logo start -->
-    <div class="preloader ">
-        <div class="d-flex h-100 w-100 justify-content-center align-items-center flex-column">
-            <div class="logoBox  ">
-                <img src="assets/images/logo.svg" alt="Logo">
-                <div class="spinner-border text-white" role="status">
-                    <span class="visually-hidden">Loading...</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- pre loader with logo end -->
+
     <!-- ======================header area start=================== -->
     <section class="header py-3 position-absolute top-0 start-0 w-100">
         <div class="container">
@@ -78,7 +67,7 @@
     <!-- =======================hero section start======================= -->
     <section class="common_herobg h-50">
         <div class="container">
-            <div style="padding: 250px 0;">
+            <div class="hero_title">
                 <h1 class="display-2 fw-normal text-white fm-didact text-center">Become a Customer</h1>
             </div>
         </div>
