--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div>
                     <h1 class="display-2 fw-normal text-white fm-didact text-center">Design Your
                         Space, <br> Define Your <span style="color: #9CB31A;">Style</span></h1>
-                    <p class="text-center fs-5 text-white fw-normal mt-3">Create comfort that reflects your unique
+                    <p class="text-center pb-3 fs-5 text-white fw-normal mt-3">Create comfort that reflects your unique
                         taste. <br>
                         Modern living starts with thoughtful design.</p>
                     <a href="#"
